// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should return posts 1`] = `
Object {
  "code": 200,
  "content": Object {
    "query": Object {},
    "username": "username",
  },
  "res": undefined,
}
`;

exports[`should return posts with error 1`] = `
Object {
  "code": 404,
  "content": Object {
    "query": Object {
      "type": "simple",
    },
    "test": "error response",
    "username": "username",
  },
  "res": undefined,
}
`;

exports[`should return posts with simplify 1`] = `
Object {
  "code": 200,
  "content": Object {
    "query": Object {
      "type": "simple",
    },
    "username": "username",
  },
  "res": undefined,
}
`;
